src/test/ui/const-generics/impl-trait-with-const-arguments.stderr
error[E0632]: cannot provide explicit generic arguments when `impl Trait` is used in argument position
  --> $DIR/impl-trait-with-const-arguments.rs:18:20
   |
LL |     assert_eq!(f::<4usize>(Usizable), 20usize);
   |                    ^^^^^^ explicit generic argument not allowed
   |
   = note: see issue #83701 <https://github.com/rust-lang/rust/issues/83701> for more information
   = help: add `#![feature(explicit_generic_args_with_impl_trait)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0632`.
